XWIKI-10821: Unable to logout with superadmin.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus/user.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus/user.vm
@@ -15,7 +15,7 @@
 ##
 #if (!$isGuest)
 #if ($isSuperAdmin)
-  #xwikitopmenuentrystart('', $!services.localization.render('superadmin'), 'tmUser', 'hasIcon navbar-avatar', $userGlyphIcon, '')
+  #xwikitopmenuentrystart('', $!services.localization.render('superadmin'), 'tmUser', 'hasIcon navbar-avatar', 'user', '')
     ## LOGOUT
     #set ($logouturl = $xwiki.getURL('XWiki.XWikiLogout', 'logout', "xredirect=$escapetool.url($xwiki.relativeRequestURL)"))
     #xwikitopmenuentry($!logouturl $!services.localization.render('logout') 'tmLogout', '', 'log-out')
