--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docextra.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docextra.vm
@@ -4,7 +4,7 @@
 ##
 <div id="xdocFooter">
   #template("documentTags.vm")
-  <div id="xdocCreator">
+  <div id="xdocAuthors">
     <div class="xdocCreation""> ## Creation
       $services.localization.render('core.footer.creation', [$xwiki.getUserName($doc.creator), $xwiki.formatDate($doc.creationDate)])<br/>
       #if($tdoc.realLanguage != $doc.realLanguage)
