--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
@@ -252,7 +252,7 @@
   padding: @breadcrumb-padding-vertical @breadcrumb-padding-horizontal;
 }
 
-#xdocCreator {
+#xdocAuthors {
   text-align: right;
 }
 
