XWIKI-10711: Be able to have a Header in Flamingo
* Adding a new variable in layoutvars.vm called $displayPageHeader, default in Flamingo to false, that if set mimics the Colibri header behaviour by displaying the logo and the banner taken from ColorThemes

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/layoutvars.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/layoutvars.vm
@@ -101,7 +101,7 @@
 #set($displayMainMenu = true)
 #set($displayDocExtra = true)
 #set($displayShortcuts = true)
-
+#set($displayPageHeader = false) ## page header containing the logo and the banner taken from ColorTheme
 #set ($displayQuickSearch = true)
 #set ($displayLanguageChoice = true)
 
