--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/layout.less
@@ -5,7 +5,7 @@
   .container-fluid();
 }
 
-#menuview, #contentcontainer, #xwikieditor, #footerglobal{
+#menuview, #headerglobal, #contentcontainer, #xwikieditor, #footerglobal {
   .make-row();
 }
 
@@ -213,6 +213,12 @@
 }
 
 // Layout Styling =============================================================
+
+#headerglobal {
+  background-color: @xwiki-page-header-bg-color;
+  background-image: @xwiki-page-header-bg-image;
+  background-position: @xwiki-page-header-bg-position;
+}
 
 .main {
   background-color: @xwiki-page-content-bg;
