--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variablesInit.vm
@@ -86,6 +86,9 @@
   @xwiki-border-color:                  $theme.borderColor;
   @xwiki-page-content-bg:               $theme.pageContentBackgroundColor;
   @xwiki-background-secondary-color:    $theme.backgroundSecondaryColor;
+  @xwiki-page-header-bg-color:          $theme.pageHeaderBackgroundColor;
+  @xwiki-page-header-bg-image:          $theme.headerBackgroundImage;
+  @xwiki-page-header-bg-position:       $theme.headerBackgroundPosition;
 #end
 
 ##############################################
@@ -174,6 +177,9 @@
   @xwiki-panel-header-bg:               $theme.panelHeaderBackgroundColor;
   @xwiki-panel-header-text:             $theme.panelHeaderTextColor;
   @xwiki-background-secondary-color:    $theme.backgroundSecondaryColor;
+  @xwiki-page-header-bg-color:          $theme.pageHeaderBackgroundColor;
+  @xwiki-page-header-bg-image:          $theme.headerBackgroundImage;
+  @xwiki-page-header-bg-position:       $theme.headerBackgroundPosition;
 #end
 
 ##############################################
@@ -189,6 +195,9 @@
   @xwiki-panel-header-text:             $theme.panelHeaderTextColor;
   @xwiki-page-content-bg:               $theme.pageContentBackgroundColor;
   @xwiki-background-secondary-color:    $theme.backgroundSecondaryColor;
+  @xwiki-page-header-bg-color:          $theme.pageHeaderBackgroundColor;
+  @xwiki-page-header-bg-image:          $theme.headerBackgroundImage;
+  @xwiki-page-header-bg-position:       $theme.headerBackgroundPosition;
 #end
 
 ##############################################
