--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus/macros.vm
@@ -22,7 +22,9 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        #template("companylogo.vm")
+        #if (!$displayPageHeader)
+          #template("companylogo.vm")
+        #end
       </div>
       ## Collect the nav links, forms, and other content for toggling
       <div class="collapse navbar-collapse" id="xwikimainmenu">
