XWIKI-10827: Browser does not scroll to extradoc panes when the corresponding shortcuts are fired.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/misc.less
@@ -259,6 +259,12 @@ table {
   }
 }
 
+// FIX: do no use .hidden (see: XWIKI-10827) but must be invisible
+#docextraanchors{
+  .invisible();
+  font-size: 0px;
+}
+
 // Export ---------------------------------------------------------------------
 #exportModal{
   .modal-body{
