--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docextra.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docextra.vm
@@ -64,7 +64,7 @@
 ## Put anchors before the footer, otherwise the top of each section would be hidden by the floating topmenu
 ##
 #if ($docextras.size() > 0)
-<div id="docextraanchors" class="hidden">
+<div id="docextraanchors">
 #foreach ($docextra in $docextras)<span id="${docextra.get(0)}anchor">&nbsp;</span>#end
 </div>
 #end
