--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/companylogo.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/companylogo.vm
@@ -21,6 +21,8 @@
     #set($logourl = $prefdoc.getAttachmentURL($logo.filename))
   #end
 #end
-<a href="$!xwiki.getURL($services.model.resolveDocument('', 'default', $doc.documentReference.extractReference('WIKI')))" title="Home" rel="home" class="navbar-brand">
-  <img src="$!logourl" alt="Wiki Logo" id="companyLogo"/>
-</a>
+<div id="companylogo">
+  <a href="$!xwiki.getURL($services.model.resolveDocument('', 'default', $doc.documentReference.extractReference('WIKI')))" title="Home" rel="home" #if(!$displayPageHeader)class="navbar-brand"#end>
+    <img src="$!logourl" alt="Wiki Logo"/>
+  </a>
+</div>
