--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/global.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/global.vm
@@ -7,33 +7,7 @@
 #if($isInServletMode) ## Visible only in a page
 <div id="headerglobal">
 #if ($displayPageHeader)
-  <div id="company">
-  <div id="companylogo">
-    <a href="$!xwiki.getURL($services.model.resolveDocument('', 'default', $doc.documentReference.extractReference('WIKI')))" title="Home" rel="home">
-#if("$!{themeDocFullName}" == '')
-  #set($themeDocFullName = "$!xwiki.getUserPreference('colorTheme')")
-#end
-#if($themeDocFullName == '')
-  #set($themeDocFullName = 'ColorThemes.DefaultColorTheme')
-#end
-#set($themeDoc = $xwiki.getDocument($themeDocFullName))
-#set($themeObj = $themeDoc.getObject('ColorThemes.ColorThemeClass'))
-#set($logoname = $themeObj.getProperty('logoImage').value)
-#if("$!{logoname}" != '')
-  #set($logourl = $themeDoc.getAttachmentURL($logoname))
-#else
-  #set($logoname = $xwiki.getSkinPreference('logo', 'logo.png'))
-  #set($logo = $!prefdoc.getAttachment($logoname))
-  #if(!$logo)
-    #set($logourl = $xwiki.getSkinFile($logoname))
-  #else
-    #set($logourl = $prefdoc.getAttachmentURL($logo.filename))
-  #end
-#end
-    <img src="$!logourl" alt="Wiki Logo"/>
-    </a>
-  </div> ## companylogo
-  </div> ## company
+  #template("companylogo.vm")
 #end
   <div id="globallinks">
 #if ($displayLanguageChoice && $xwiki.isMultiLingual())
