--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -772,12 +772,12 @@ $doc.display("content", $obj)
 ###    Message box
 ###
 #macro(xwikimessageboxstart $title $message)
-    <div class="centered panel panel-default">
+    <div class="centered panel panel-default xwikimessage">
      <div class="panel-heading">
       <h3 class="panel-title">$title</h3>
      </div>
      <div class="panel-body">
-      <p>$message</p>
+      <p class="xwikimessage">$message</p>
 #end
 #macro(xwikimessageboxend)
       </div>
