XWIKI-10699: Make sure the Search button is the same size as the input

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
@@ -42,7 +42,14 @@
   }
 
   .button {
+    border: 1px solid lighten(@btn-primary-bg, 10%);
+    box-shadow: none;
     height: @input-height-base;
+    &:hover, 
+    &:focus {
+      border: 1px solid lighten(@btn-primary-bg, 10%);
+      box-shadow: none;
+    }
   }
 }
 
