--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/accordion.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/accordion.less
@@ -2,14 +2,17 @@
 // Accordion
 // --------------------------------------------------
 
-.accordionTabTitleBar h1, .accordionTabTitleBar h6 {
+.accordionTabTitleBar h1 {
   display:block;
   background-color: @xwiki-panel-header-bg;
-  background-image: url(@xwiki-accordion-title-bar-background) no-repeat left;
+  background-image: url(@xwiki-accordion-title-bar-background);
+  background-repeat: no-repeat;
+  background-position: center left;
   border-bottom: 1px solid @xwiki-border-color;
   color: @xwiki-panel-header-text;
   font: 700 .8em / 1.8em sans-serif;
   margin: 0;
+  overflow: hidden;
   padding: 4px 21px;
   text-transform: uppercase;
 }
