--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus/content.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus/content.vm
@@ -44,7 +44,9 @@
 ##
 ## Create menu
 ##
-#template("menus/create.vm")
+#if($displayCreateMenu)
+  #template("menus/create.vm")
+#end
 ##
 ## Actions menu
 ##
