XWIKI-10814: "create document" form: add a link if the document already exist * Better variable name + fixed spaces + removed unnecessary quotes (actually I don't even see how it could have worked with quotes, was probably a bug which makes me wonder if the PR was tested with the latest change...)

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/createinline.vm
@@ -70,8 +70,8 @@
     #if($tocreate == 'space')
         $services.localization.render('core.create.space.error.docalreadyexists', [$space])
     #else
-      #set ($DocAlreadyExistsRef = $services.model.createDocumentReference('', $space, $page))
-      $services.localization.render('core.create.page.error.docalreadyexists',  ["${space}.${page}", $xwiki.getURL("$DocAlreadyExistsRef",  'view',''), $xwiki.getURL("$DocAlreadyExistsRef", 'edit','')])
+      #set ($existingDocumentReference = $services.model.createDocumentReference('', $space, $page))
+      $services.localization.render('core.create.page.error.docalreadyexists',  ["${space}.${page}", $xwiki.getURL($existingDocumentReference, 'view', ''), $xwiki.getURL("$DocAlreadyExistsRef", 'edit','')])
     #end
   </div>
   ## reset the space & page, user will have to fill in again
