--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -2473,8 +2473,10 @@ Recursive title display detected!##
 #macro (styleSheetExtensionHooks)
   ## - Skin JAR extension hook. Placed first to allow other skin extensions to override it.
   <!-- com.xpn.xwiki.plugin.skinx.CssResourceSkinExtensionPlugin -->
-  <!-- com.xpn.xwiki.plugin.skinx.CssSkinExtensionPlugin -->
+  ## - Skin file extension hook.
   <!-- com.xpn.xwiki.plugin.skinx.CssSkinFileExtensionPlugin -->
+  ## - Skin extension hook
+  <!-- com.xpn.xwiki.plugin.skinx.CssSkinExtensionPlugin -->
 #end
 
 #**
