--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/macros.vm
@@ -2475,7 +2475,7 @@ Recursive title display detected!##
   <!-- com.xpn.xwiki.plugin.skinx.CssResourceSkinExtensionPlugin -->
   ## - Skin file extension hook.
   <!-- com.xpn.xwiki.plugin.skinx.CssSkinFileExtensionPlugin -->
-  ## - Skin extension hook
+  ## - Skin extension hook, placed at the last to be able to override previous css rules with a Skin Extension Object
   <!-- com.xpn.xwiki.plugin.skinx.CssSkinExtensionPlugin -->
 #end
 
