--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -75,11 +75,18 @@ $xwiki.jsfx.use('js/scriptaculous/effects.js', true)
 <script type="text/javascript">
 // <![CDATA[
 require.config({
-  baseUrl: '/',
   ## see: http://requirejs.org/docs/jquery.html#noconflictmap to see why this works.
   paths: {
     'jquery': "$xwiki.getSkinFile('js/amd/')jquery",
-    'bootstrap': "$services.webjars.url('bootstrap/3.2.0/js/bootstrap.js')"
+    ## Requirejs will automatically add a ".js" suffix if the generated URL doesn't contain a "?". It happens that we
+    ## don't generate a URL with "?" when we export in HTML for example. In this case we remove the ".js" suffix since
+    ## requirejs will add one...
+    ## Note that we cannot do this generically in the webjars module when exporting in HTML because
+    #set ($bootstrapURL = $services.webjars.url('bootstrap/3.2.0/js/bootstrap.js'))
+    #if (!$bootstrapURL.contains('?'))
+      #set ($bootstrapURL = $stringtool.removeEnd($bootstrapURL, ".js"))
+    #end
+    'bootstrap': "$bootstrapURL"
   },
   shim: {
     'bootstrap' : ['jquery']
