--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/login.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/login.vm
@@ -35,30 +35,30 @@
   <dt>
     <label for="j_username">$services.localization.render('username')</label>
     #if($xwiki.exists('XWiki.ForgotUsername') && $xwiki.hasAccessLevel('view', 'XWiki.ForgotUsername'))
-      <span class="xAdditional"><a href="$xwiki.getURL('XWiki.ForgotUsername')">$services.localization.render('xe.admin.forgotUsername.loginMessage')</a></span>
+      <span class="xAdditional"><a href="$xwiki.getURL('XWiki.ForgotUsername')" tabindex="500">$services.localization.render('xe.admin.forgotUsername.loginMessage')</a></span>
     #end
   </dt>
   <dd class="input-group">
     <span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
-    <input class="form-control" type="text" id="j_username" size="60" name="j_username" value=""/>
+    <input class="form-control" type="text" id="j_username" size="60" name="j_username" value="" tabindex="100"/>
   </dd>
   <dt>
     <label for="j_password">$services.localization.render('password')</label>
     #if($xwiki.exists('XWiki.ResetPassword') && $xwiki.hasAccessLevel('view', 'XWiki.ResetPassword'))
-      <span class="xAdditional"><a href="$xwiki.getURL('XWiki.ResetPassword')">$services.localization.render('xe.admin.passwordReset.loginMessage')</a></span>
+      <span class="xAdditional"><a href="$xwiki.getURL('XWiki.ResetPassword')" tabindex="600">$services.localization.render('xe.admin.passwordReset.loginMessage')</a></span>
     #end
   </dt>
   <dd class="input-group">
     <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-    <input type="password" id="j_password" size="60" name="j_password" value=""/>
+    <input type="password" id="j_password" size="60" name="j_password" value="" tabindex="200"/>
   </dd>
   <dt></dt>
   <dd>
     <label class="xHint" for="rememberme">
-      <input id="rememberme" type="checkbox" name="j_rememberme" value="true"/> $services.localization.render('remembermeonthiscomp')
+      <input id="rememberme" type="checkbox" name="j_rememberme" value="true" tabindex="300"/> $services.localization.render('remembermeonthiscomp')
     </label>
   </dd>
-  <dt><input type="submit" class="btn btn-primary col-xs-12" value="$services.localization.render('login')"/></dt>
+  <dt><input type="submit" class="btn btn-primary col-xs-12" value="$services.localization.render('login')" tabindex="400"/></dt>
 </dl>
 #xwikimessageboxend()
 </form>
