--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/javascript.vm
@@ -78,15 +78,17 @@ require.config({
   ## see: http://requirejs.org/docs/jquery.html#noconflictmap to see why this works.
   paths: {
     'jquery': "$xwiki.getSkinFile('js/amd/')jquery",
-    ## Requirejs will automatically add a ".js" suffix if the generated URL doesn't contain a "?". It happens that we
-    ## don't generate a URL with "?" when we export in HTML for example. In this case we remove the ".js" suffix since
-    ## requirejs will add one...
-    ## Note that we cannot do this generically in the webjars module when exporting in HTML because the webjars module
-    ## provide generic URLs and they don't all go through requirejs...
-    #set ($bootstrapURL = $services.webjars.url('bootstrap/3.2.0/js/bootstrap.js'))
-    #if (!$bootstrapURL.contains('?'))
-      #set ($bootstrapURL = $stringtool.removeEnd($bootstrapURL, ".js"))
-    #end
+## Requirejs will automatically add a ".js" suffix if the generated URL doesn't contain a "?". It happens that we
+## don't generate a URL with "?" when we export in HTML for example. In this case we remove the ".js" suffix since
+## requirejs will add one...
+## Note that we cannot do this generically in the webjars module when exporting in HTML because the webjars module
+## provide generic URLs and they don't all go through requirejs...
+## Note that this comment and code below are not correctly indentend voluntarily in order to generate nicely formatted
+## code at runtime!
+#set ($bootstrapURL = $services.webjars.url('bootstrap/3.2.0/js/bootstrap.js'))
+#if (!$bootstrapURL.contains('?'))
+  #set ($bootstrapURL = $stringtool.removeEnd($bootstrapURL, ".js"))
+#end
     'bootstrap': "$bootstrapURL"
   },
   shim: {
