XWIKI-10838: WYSIWYG has 2 levels of bold: one introduced by Flamingo's heading and the standard one (<strong>).

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variables.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/variables.less
@@ -2,4 +2,5 @@
 // Variables of bootstrap overrided by XWiki
 // --------------------------------------------------
 
-@border-width: 1px;
+@border-width:            1px;
+@headings-font-weight:    400; // See: http://jira.xwiki.org/browse/XWIKI-10838
