XWIKI-10907: Lots of warnings in the logs: Deprecated usage of method [org.apache.velocity.tools.generic.ListTool.get] * Fixed a few places, a lot more remaining...

--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/docextra.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/docextra.vm
@@ -101,10 +101,10 @@
     <script type="text/javascript">
       var hashviewer = self.document.location.hash.substring(1);
       #foreach($docextra in $docextras)
-        #set ($extraAnchor = $listtool.get($docextra, 0))
-        #set ($extraName = $listtool.get($docextra, 1))
-        #set ($extraTemplate = $listtool.get($docextra, 4))
-        #set ($extraShortcut = $listtool.get($docextra, 5))
+        #set ($extraAnchor = $docextra[0])
+        #set ($extraName = $docextra[1])
+        #set ($extraTemplate = $docextra[4])
+        #set ($extraShortcut = $docextra[5])
         ##
         ## Set the extra to load
         ##
