--- a/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/editobject.vm
+++ b/xwiki-platform-core/xwiki-platform-web/src/main/webapp/templates/editobject.vm
@@ -120,7 +120,7 @@
       #end
     #else
       #set ($objects = $doc.getObjects($class.name))
-      #set ($objectCount = $listtool.size($objects))
+      #set ($objectCount = $objects.size())
       <div id="xclass_${escapetool.xml($class.name)}_title" class="xclass-title"><h2>$services.localization.render('core.editors.object.objectsForClass', [${escapetool.xml($class.name)}]) <span id="xclass_${escapetool.xml($class.name)}_xobject_nb" class="xclass_xobject_nb">($objectCount)</span></h2></div>
       <div id="xclass_${escapetool.xml($class.name)}_content" class="xclass-content"><div>
       #foreach ($object in $objects)
@@ -210,11 +210,11 @@
 #if ("$!{request.xaction}" == 'addObject')
   #set ($class = $xwiki.getClass(${request.className}))
   #set ($props = $class.getProperties())
-  #if ($listtool.isEmpty($props))
+  #if ($props.isEmpty())
     $response.setStatus(404)
     #error($services.localization.render('core.editors.object.add.invalidClassName', [$request.className]))
   #else
-    #set ($isNewClass = $listtool.isEmpty($doc.getObjects(${request.className})))
+    #set ($isNewClass = $doc.getObjects(${request.className}).isEmpty())
     #set ($newobj = $doc.newObject(${request.className}))
     #set ($discard = $doc.save())
     #if ("$!{request.xredirect}" != '')
