[Misc] Copy changes done in default macros.vm to flamingo's file.
See d83f13a

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/macros.vm
@@ -1388,6 +1388,7 @@ ${Msz}Mb##
       </td>
     </tr>
     <tr>
+      <span class="xwiki-livetable-limits"></span>
       <td class="xwiki-livetable-pagination">
         <span class="xwiki-livetable-limits"></span>
         <span class="controlPagination">
