XWIKI-10568: Do not use subdirectories for *.vm files in the skin directory.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/contentview.vm
@@ -37,7 +37,7 @@
     </div>
     #if($displayContentMenu)
       <div class="document-menu col-xs-12 col-md-5">
-        #template("menus/content.vm")
+        #template("menus_content.vm")
       </div>
     #end
   </div>
