--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docdoesnotexist.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/docdoesnotexist.vm
@@ -9,7 +9,7 @@
   #template("startpage.vm")
   <div class="main">
   <div id="contentmenu" class="actionmenu">
-    #template("menus/content.vm")
+    #template("menus_content.vm")
   </div>
   <div id="mainContentArea">
   #if($xwiki.exists("XWiki.DocumentDoesNotExist"))
