--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_content.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/menus_content.vm
@@ -45,7 +45,7 @@
 ## Create menu
 ##
 #if($displayCreateMenu)
-  #template("menus/create.vm")
+  #template("menus_create.vm")
 #end
 ##
 ## Actions menu
