--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/startpage.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/startpage.vm
@@ -3,7 +3,7 @@
 #template("htmlheader.vm")
 #if($displayMainMenu)
   <div id="menuview">
-    #template("menus/view.vm")
+    #template("menus_view.vm")
   </div>
 #end
 #template("header.vm")
