XWIKI-10905: The "Search" field is not well displayed on ie8.

--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/less/action-menus.less
@@ -41,7 +41,7 @@
     }
   }
 
-  .button {
+  .btn {
     border: 1px solid lighten(@btn-primary-bg, 10%);
     box-shadow: none;
     height: @input-height-base;
