--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-skin/src/main/resources/flamingo/hierarchy.vm
@@ -21,7 +21,7 @@
   #end
 #end
 #if($isInServletMode) ## Visible only in a page
-  #if("$!doc.parent" !=  '' || $xcontext.action != 'view')
+  #if("$!doc.parent" !=  '' || $xcontext.action == 'edit' || $xcontext.action == 'inline')
     <ol id="hierarchy" class="breadcrumb clearfix">
     #if ($doc.fullName != 'Main.WebHome')
       #if ($xcontext.action == 'edit' || $xcontext.action == 'inline')
